23 March 2007: Wouter
	- review of yesterday's commits.

22 March 2007: Wouter
	- AIX configure check.
	- lock-verify can handle references to locks that are created
	  in files it has not yet read in.
	- threaded hash table test. 
	- unit test runs lock-verify afterwards and checks result.
	- need writelock to update data on hash_insert.
	- message cache code, msgreply code.

21 March 2007: Wouter
	- unit test of hash table, fixup locking problem in table_grow().
	- fixup accounting of sizes for removing items from hashtable.
	- unit test for hash table, single threaded test of integrity.
	- lock-verify reports errors nicely. More quiet in operation.

16 March 2007: Wouter
	- lock-verifier, checks consistent order of locking.

14 March 2007: Wouter
	- hash table insert (and subroutines) and lookup implemented.
	- hash table remove.
	- unit tests for hash internal bin, lru functions.

13 March 2007: Wouter
	- lock_unprotect in checklocks.
	- util/storage/lruhash.h for LRU hash table structure.

12 March 2007: Wouter
	- configure.ac moved to 0.2.
	- query_info and replymsg util/data structure.

9 March 2007: Wouter
	- added rwlock writelock checking.
	  So it will keep track of the writelock, and readlocks are enforced
	  to not change protected memory areas.
	- log_hex function to dump hex strings to the logfile.
	- checklocks zeroes its destroyed lock after checking memory areas.
	- unit test for alloc.
	- identifier for union in checklocks to please older compilers.
	- created 0.1 tag.

8 March 2007: Wouter
	- Reviewed checklock code.

7 March 2007: Wouter
	- created a wrapper around thread calls that performs some basic
	  checking for data race and deadlock, and basic performance 
	  contention measurement.

6 March 2007: Wouter
	- Testbed works with threading (different machines, different options).
	- alloc work, does the special type.

2 March 2007: Wouter
	- do not compile fork funcs unless needed. Otherwise will give